# Sales-Tracker-Web-App

./: .gitignore  README.md  app.py  database.py  models.py  pyproject.toml  requirements.txt  run.bat  run.sh  sample_data.csv
static/css/: style.css
templates/: base.html  index.html  settings.html  yearly.html
