[project]
name = "sales-tracker"
version = "0.1.0"
description = "CSV-based sales tracking app with Flask"
requires-python = ">=3.9"
dependencies = [
    "flask==3.0.0",
    "pandas==2.1.1",
    "python-dateutil==2.8.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
